feat: setup sanity

--- a/.env.local
+++ b/.env.local
@@ -6,3 +6,5 @@ SANITY_TOKEN=
 AUTH_SECRET=as4d65a4s6d54a6s4d65asd46
 AUTH_GITHUB_ID=Ov23limKDStCG1TEEERR
 AUTH_GITHUB_SECRET=d13221369bc2e41c2a15c9917a3ac47046f6e9bb
+NEXT_PUBLIC_SANITY_PROJECT_ID="rm1i3u8j"
+NEXT_PUBLIC_SANITY_DATASET="production"
