--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.62.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-auth": "^5.0.0-beta.25",
+    "next-sanity": "^9.8.8",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-dom": "^16.8 || ^17.0 || ^18.0 || ^19.0",
     "react-hook-form": "^7.53.1",
+    "sanity": "^3.62.3",
+    "sanity-plugin-markdown": "^5.0.0",
+    "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
